--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -23,3 +23,10 @@ user_<%= n %>:
   activated: true
   activated_at: <%= Time.zone.now %>
 <% end %>
+
+ricardo:
+  name: Ricardo Examples
+  email: ricardo@example.com
+  password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
